--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,19 @@ spring:
     username: ${DATASOURCE_USERNAME}
     password: ${DATASOURCE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+
+jwt:
+  secretKey: ${JWT_SECRET_KEY}
+  expiration: ${JWT_ACCESS_TOKEN_EXPIRATION}   #172800000    # 48시간
+  refreshExpiration: ${JWT_REFRESH_TOKEN_EXPIRATION} #604800000   # 7일
