--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,3 +66,20 @@ jobs:
             echo '${{ secrets.ENVIRONMENT }}' | base64 --decode > ./production.env
             docker run --env-file production.env -d -p 8080:8080 --name medinet-backend ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }}:${{ github.sha }}
             rm ./production.env
+
+
+      - name: CI Success Notification
+        uses: sarisia/actions-status-discord@v1
+        if: ${{ success() }}
+        with:
+          title: CI
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          color: 00FF00
+
+      - name: CI Failure Notification
+        uses: sarisia/actions-status-discord@v1
+        if: ${{ failure() }}
+        with:
+          title: CI
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          color: FF0000
