--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,9 +27,21 @@ spring:
       max-request-size: 500MB
       max-file-size: 500MB
 
+
 jwt:
   secret-key: ${JWT_SECRET_KEY}
   access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION}
   refresh-token-expiration: ${JWT_REFRESH_TOKEN_EXPIRATION}
 server:
   port: ${SERVER_PORT}
+
+oauth:
+  providers:
+    kakao:
+      client-id: { KAKAO_CLIENT_ID }
+      client-secret: { KAKAO_CLIENT_SECRET }
+      redirect-uri: "{BASEURL}/oauth2/callback/kakao"
+    google:
+      client-id: { GOOGLE_CLIENT_ID }
+      client-secret: { GOOGLE_CLIENT_SECRET }
+      redirect-uri: "{BASEURL}/oauth2/callback/google"
