feat/file, feat/mail

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,8 +26,18 @@ spring:
     multipart:
       max-request-size: 500MB
       max-file-size: 500MB
-
-
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: ${SMTP_AUTH}
+          timeout: ${SMTP_TIMEOUT}
+          starttls.enable: ${SMTP_STARTTLS_ENABLE}
+          
 jwt:
   secret-key: ${JWT_SECRET_KEY}
   access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION}
@@ -45,3 +55,13 @@ oauth:
       client-id: { GOOGLE_CLIENT_ID }
       client-secret: { GOOGLE_CLIENT_SECRET }
       redirect-uri: "{BASEURL}/oauth2/callback/google"
+
+cloud:
+  aws:
+    s3:
+      bucket: ${AWS_S3_BUCKET}
+    stack.auto: false
+    region.static: ap-northeast-2
+    credentials:
+      accessKey: ${AWS_S3_ACCESS_KEY_ID}
+      secretKey: ${AWS_S3_SECRET_ACCESS_KEY}
